# django-orm-views

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
django_orm_views/: __init__.py  apps.py  constants.py  exceptions.py  not_managed_model.py  register.py  sync.py  views.py
django_orm_views/management/commands/: generate_view_docs.py  sync_views.py
django_postgres_views/: __init__.py  apps.py  constants.py
django_postgres_views/management/commands/: sync_views.py
tests/test_project/test_app/: models.py  postgres_views.py  tests.py
tests/test_project/test_app/migrations/: 0001_initial.py
tests/test_project/test_project/: settings.py
