[project]
name = "django-orm-views"
version = "1.0.0"
authors = [
  { name="Josh Dutton", email="j.dutton@iwoca.co.uk" },
]
description = "A framework for managing database views based on Django, without the migrations"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/iwoca/django-orm-views"
"Bug Tracker" = "https://github.com/iwoca/django-orm-views/issues"
